# utopian_mod_launcher

./: CMakeLists.txt  GameModLauncher.ini  README.md
mods/.launcher/: banner.txt
scripts/: generate_icon.ps1
src/: dll_injector.cpp  dll_injector.h  launch_overlay.cpp  launch_overlay.h  launcher_cli.cpp  launcher_cli.h  launcher_config.cpp  launcher_config.h  launcher_runtime.cpp  launcher_runtime.h  launcher_services.cpp  launcher_services.h  launcher_types.h  launcher_version.h  load_order.cpp  load_order.h  main.cpp  mod_discovery.cpp  mod_discovery.h  mod_ini.cpp  mod_ini.h  mod_package.cpp  mod_package.h  path_utils.cpp  path_utils.h  process_utils.cpp  process_utils.h  self_tests.cpp  self_tests.h  string_utils.cpp  string_utils.h
src/windows_ui/: file_dialogs.cpp  file_dialogs.h  install_options_dialog.cpp  install_options_dialog.h  install_source_dialog.cpp  install_source_dialog.h  install_source_strategy.cpp  install_source_strategy.h  launcher_help.cpp  launcher_help.h  launcher_window.cpp  launcher_window.h  mod_list_view.cpp  mod_list_view.h  mod_settings_dialog.cpp  mod_settings_dialog.h  package_target_dialog.cpp  package_target_dialog.h  ui_helpers.cpp  ui_helpers.h
